# rs-proxmox

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
rs-proxmox/: Cargo.toml  README.md
rs-proxmox-client/: Cargo.toml
rs-proxmox-client/src/: client.rs  lib.rs
rs-proxmox-generator/: Cargo.toml  README.md  apidoc.json
rs-proxmox/src/: lib.rs  network.rs  vm.rs
rs-proxmox/src/network/: firewall.rs
rs-proxmox/src/vm/: agent.rs  clone.rs  config.rs  pending.rs  status.rs  template.rs
scripts/: rsmk.sh
