[package]
name = "rs-proxmox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-proxmox-client = { path = "../rs-proxmox-client", version = "=0.1.0" }
reqwest = { version = "0.11", features = ["native-tls", "cookies", "json"] }
serde = "1"
serde_json = "1"